(filter) Improve consistency in naming and reduce redundant copying between protobuf and Java representations of equivalent objects